--- a/第五章 漏洞学习与挖掘/16 密码找回漏洞与利用.md
+++ b/第五章 漏洞学习与挖掘/16 密码找回漏洞与利用.md
@@ -95,19 +95,15 @@ echo '</form>';
 
 需要更改用户是admin  [moon@moonsec.com](mailto:moon@moonsec.com) 发邮件 邮件就有
 
-```http
-http://www.webtester.com/forget.php?c=send&token=5f40ea6af1d051a41bbfd307b75b5c08
-```
+http://www.webtester.com/forget.php?c=send&token=f77a04b47d4b859b4119cdea9b9a01f9
 
 访问链接修改密码
 
-```http
 http://www.webtester.com/forget.php?c=login 
-```
 
 主要看这个函数是否可以预测
 
-```php+HTML
+```php
 function create_pass($username,$email){
 	$token=md5(time().$username.$email);
 	return $token;
@@ -128,7 +124,7 @@ md5(当前时间戳 +用户名)  生成 token 原理
 
 我们在提交key的之前 生成一分钟或者一个小时以内的token 用脚本去访问每一个链接
 
-http://www.webtester.com/forget.php?c=send&token=5f40ea6af1d051a41bbfd307b75b5c08
+http://www.webtester.com/forget.php?c=send&token=f77a04b47d4b859b4119cdea9b9a01f9
 
 假如存在的token就可以修改密码。
 
@@ -154,13 +150,11 @@ function write_file($c){
 ?>
 ```
 
-在php里面运行脚本D:\phpStudy\php\php-5.2.17>php time.php
+在php里面运行脚本php time.php
 
 提交admin和 [moon@moonsec.com](mailto:moon@moonsec.com)邮箱 发送key
 
 ![img](../acess/wps6.jpg) 
-
- 
 
 用brupsuite 抓包修改变量 选择payload 读入文件time.txt
 
@@ -172,24 +166,14 @@ function write_file($c){
 
 ![img](../acess/wps9.jpg) 
 
- 
-
 访问穷举出来的 token访问url
 
-http://www.webtester.com/forget.php?c=send&token=9bc5870f0e974f76a89e1dbc641d3329
+http://www.webtester.com/forget.php?c=send&token=f77a04b47d4b859b4119cdea9b9a01f9
 
- 
-
-![img](file:///C:\Users\wzxmt\AppData\Local\Temp\ksohtml1992\wps10.jpg) 
-
- 
-
-![img](file:///C:\Users\wzxmt\AppData\Local\Temp\ksohtml1992\wps11.jpg) 
+![image-20210425004513265](../acess/image-20210425004513265.png)
 
 修改成功之后登录
 
-![img](file:///C:\Users\wzxmt\AppData\Local\Temp\ksohtml1992\wps12.jpg) 
-
- 
+![image-20210425005059658](../acess/image-20210425005059658.png)
 
 本地生成token出错的原因 是 程序没有设置地区时间时间戳就会不一样 导致出错。
